/*
 * $Id: ChangeLog,v 1.1171 2013-10-12 00:00:58 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-10-11 22:00 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     * Previous entry corrected.
   * ./compile_MINGW.bat
     + /i switch to prevent linking of OOHG resource file.
   * include/i_windefs.ch
     + Defines for HDN_ITEMCHANGING and HDN_TRACK.
   * source/h_grid.prg
     ! Visual artifacts when sizing column headers.
     + METHOD FirstVisibleItem.
     * Function ListView_GetTopIndex returns 1-based index.
   * doc/classes.txt
     * Updated.

2013-10-07 18:04 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     ! Grid is not painted properly after resizing one column and
       clicking in a new row.

2013-10-04 18:09 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * samples/oohg/stream/TStream.prg
     ! Fixed TStreamFile:Skip() method.
     + ::nMinToFill property added. Autofills when buffer is lower
       than this value.

2013-10-02 21:17 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./compile_MINGW.bat
     ! Libraries not linked in console mode.

2013-10-01 21:13 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     * Previous entry corrected.

2013-10-01 20:45 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * doc/classes.txt
     * Updated.
   * include/i_altsyntax.ch
   * include/i_xbrowse.ch
   * source/h_xbrowse.prg
     + DATA lUpdCols.
     + Added clause UPDATECOLOR to force a color update of the
       displayed items on every change.
     * Redraw is disabled during ::Refresh().
     ! Can't refresh row color unless ::RefreshRow() is called.
   * source/h_browse.prg
     - DATA lUpdCols.

2013-09-30 17:35 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/c_gdiplus.c